# chatput

./: .gitignore  CLAUDE.md  PITFALL.md  README.md
assets/icon/: .gitignore  README.md  generate.sh  svg2png.swift
desktop-electron/: package-lock.json  package.json
desktop-electron/src/: main.js  preload.cjs
desktop-electron/src/renderer/: index.html  renderer.js
desktop-macos/: project.yml
desktop-macos/Sources/: Info.plist
desktop-macos/Sources/App/: AppState.swift  ChatputDesktopApp.swift  ContentView.swift  Coordinator.swift  RemoteInputDesktopApp.swift  Settings.swift  SettingsView.swift
desktop-macos/Sources/Assets.xcassets/AppIcon.appiconset/: Contents.json
desktop-macos/Sources/Assets.xcassets/MenuBarIcon.imageset/: Contents.json
desktop-macos/Sources/Core/: AppConfig.swift  FocusMonitor.swift  Localization.swift  LoginItem.swift  NetworkInfo.swift  PointerInjector.swift  QRCodeGenerator.swift  SignalingClient.swift  SignalingServer.swift  TextInjector.swift  WebRTCManager.swift  WindowCapturer.swift  Wire.swift
desktop-windows/: Cargo.toml  README.md  build.rs
desktop-windows/scripts/: shot-one.ps1  shot-settings.ps1  shot-tabs.ps1  test-signaling.ps1
desktop-windows/src/: main.rs
desktop-windows/src/app/: app_state.rs  coordinator.rs  mod.rs  settings.rs  ui.rs
desktop-windows/src/core/: config.rs  focus_monitor.rs  h264_encoder.rs  localization.rs  login_item.rs  mod.rs  network_info.rs  pointer_injector.rs  qrcode_gen.rs  signaling_client.rs  signaling_server.rs  text_injector.rs  webrtc_manager.rs  window_capturer.rs  wire.rs
docs/: design-language.md  remote-screen-resize-flash.md  session-interaction-spec.md  voice-composer-spec.md
mobile-android/: settings.gradle
mobile-android/app/: build.gradle
mobile-android/app/src/english/assets/sherpa-onnx-paraformer-en-2024-03-09/: README.md  tokens.txt
mobile-android/app/src/main/: AndroidManifest.xml
mobile-android/app/src/main/res/drawable/: bg_action_circle.xml  bg_balloon.xml  bg_composer_card.xml  bg_drag_grabber.xml  bg_grab_pill.xml  bg_input_field.xml  bg_message_bubble.xml  bg_nav_item.xml  bg_orb_halo.xml  bg_popup_card.xml  bg_popup_row.xml  bg_recent_device.xml  bg_screen_bottom_shadow.xml  bg_session_accent.xml  bg_session_badge.xml  bg_session_dot.xml  bg_status_chip_connected.xml  bg_status_chip_idle.xml  bg_voice_orb.xml  ic_delete.xml  ic_disconnect.xml  ic_dpad.xml  ic_grab_corner.xml  ic_grab_dots.xml  ic_launcher_foreground.xml  ic_mic.xml  ic_more_vert.xml  ic_nav_backspace.xml  ic_nav_clear.xml  ic_nav_enter.xml  ic_nav_esc.xml  ic_nav_select_all.xml  ic_reconnect.xml  (+6 more)
mobile-iphone/: README.md  project.yml
mobile-iphone/Sources/: Info.plist
mobile-iphone/Sources/App/: AppStyle.swift  ChatView.full.bak  ChatView.swift  ChatViewController.swift  ChatputPhoneApp.swift  ConnectionManager.swift  HomeViewController.swift  MainView.swift  MainView_swiftui_ref.swift  Models.swift  RowViews.swift  SessionListViewController.swift  Theme.swift
mobile-iphone/Sources/App/_swiftui_original/: AppStyle.swift
mobile-iphone/Sources/Core/: DesktopConnection.swift  QRScannerView.swift  SignalingClient.swift  SpeechRecognizer.swift  Wire.swift
scripts/: build-android.sh  build-ios.sh  build-macos.sh  build-windows.bat  build-windows.ps1  deploy-signaling.sh  fetch-deps.sh  setup-signing.sh
signaling-server/: package-lock.json  package.json
signaling-server/src/: index.js
(+46 files in other folders)
